# termeme-cli

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-assets.yml  release-plz.yml
src/: app.rs  cli.rs  config.rs  hook.rs  main.rs  sound.rs
